<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        app:title="Notifications">
        <SwitchPreferenceCompat
            app:key="@string/key_notifications"
            app:title="Enable notifications"
            app:defaultValue="true"
            />
        <SwitchPreferenceCompat
            app:key="@string/key_ping_notifications"
            app:title="Enable ping notifications"
            app:summary="Enable notifications when pinged by a user"
            app:defaultValue="true"
            app:dependency="@string/key_notifications"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="Data Privacy">
        <SwitchPreferenceCompat
            app:key="@string/key_enable_web"
            app:title="Enable personal web space"
            app:summary="Enables your personal webspace.\n\nJust enable this setting and push you're website to /sdcard/Android/data/com.onionchat.dr0id/files/web/[index.html]"
            app:defaultValue="true"/>
        <SwitchPreferenceCompat
            app:key="@string/key_enable_message_read"
            app:title="Message read indicator"
            app:summary="By enable this option OnionChat will send a message status update to initiators once you've read his message"
            app:defaultValue="true"/>
        <SwitchPreferenceCompat
            app:key="@string/key_enable_message_forwarding"
            app:title="Message forwarding"
            app:summary="By enable this option OnionChat will forward all messages you receive via Broadcasts to all users in your contact list"
            app:defaultValue="true"/>
        <SwitchPreferenceCompat
            app:key="@string/key_allow_broadcast_adding"
            app:title="Allow auto add broatcast"
            app:summary="By enable this option your contacts are allowed to add you to new broadcasts"
            app:defaultValue="true"/>
    </PreferenceCategory>

<!--
    <Preference
        app:key="feedback"
        app:title="Send feedback"
        app:summary="Report technical issues or suggest new features"
        />
-->
</PreferenceScreen>
